--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,25 +20,35 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ steps.version.outputs.go_version }}
+          
       - name: Build geosite
         id: build
         run: |
-          go run -v .
+          # go run -v .
+
+      - name: Get geosite.dat relative files from Loyalsoldier
+        run: |
+          wget -O geosite.dat https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geosite.dat
+          #wget https://github.com/Loyalsoldier/geoip/raw/release/geoip.dat
+          
       - name: Release rule sets
         if: steps.build.outputs.skip != 'true'
         run: .github/release-rule-set.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Generate sha256 hash
         if: steps.build.outputs.skip != 'true'
         run: |
           sha256sum geosite.db > geosite.db.sha256sum
+          
       - uses: dev-drprasad/delete-older-releases@v0.3.2
         if: steps.build.outputs.skip != 'true'
         with:
           keep_latest: 10
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Release geosite
         if: steps.build.outputs.skip != 'true'
         uses: softprops/action-gh-release@v1
