--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,7 @@ jobs:
       - name: Build geosite
         id: build
         run: |
+            git update-index --chmod=+x .github/release-rule-set.sh
           # go run -v .
 
       - name: Get geosite.dat geoip.dat files from Loyalsoldier
@@ -42,7 +43,9 @@ jobs:
    
       - name: Release rule sets
         if: steps.build.outputs.skip != 'true'
-        run: .github/release-rule-set.sh
+        run: |
+          git update-index --chmod=+x .github/release-rule-set.sh
+          .github/release-rule-set.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
