--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,7 +44,9 @@ jobs:
       - name: Release rule sets
         if: steps.build.outputs.skip != 'true'
         run: |
+          chmod +x .github/release-rule-set.sh
           git update-index --chmod=+x .github/release-rule-set.sh
+          chmod +x .github/release-rule-set.sh
           .github/release-rule-set.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
