--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,11 +44,11 @@ jobs:
       - name: Release rule sets
         if: steps.build.outputs.skip != 'true'
         run: |
-          chmod +x ../release-rule-set.sh
+          chmod +x .github/release-rule-set.sh
          # git update-index --chmod=+x ../release-rule-set.sh
          # chmod +x .github/release-rule-set.sh
           mkdir rule-set
-          ../release-rule-set.sh
+          .github/release-rule-set.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
