--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Release rule sets
         if: steps.build.outputs.skip != 'true'
         run: |
-         # chmod +x .github/release-rule-set.sh
+          chmod +x .github/release-rule-set.sh
          # git update-index --chmod=+x ../release-rule-set.sh
          # chmod +x .github/release-rule-set.sh
          # mkdir rule-set
