--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,11 +1,11 @@
 name: Build
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *"
+  #workflow_dispatch:
+  #schedule:
+  #  - cron: "0 0 * * *"
   push:
     branches:
-      - main
+      - realse
 jobs:
   build:
     name: Build
@@ -29,6 +29,11 @@ jobs:
           NO_SKIP: true
         run: |
           go run -v .
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: geosite.dat
+          path: geosite.dat
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
