--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -182,13 +182,13 @@ jobs:
           sha256sum geoip.db > geoip.db.sha256sum          
           sha256sum geosite.db > geosite.db.sha256sum   
           
-      - uses: dev-drprasad/delete-older-releases@v0.3.2
-        if: steps.build.outputs.skip != 'true'
+      - name: Delete current release assets
+        uses: andreaswilli/delete-release-assets-action@v3.0.0
         with:
-          keep_latest: 10
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag: latest
+          deleteOnlyFromDrafts: false
+
       - name: Create and Upload Release
         id: upload_release
         uses: svenstaro/upload-release-action@v2
@@ -199,7 +199,7 @@ jobs:
           file_glob: true
           overwrite: true
           file: ./publish/*
-
+          
       - name: Git push assets to "release" branch
         run: |
           cd publish || exit 1
