--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -73,6 +73,36 @@ jobs:
 
           rm LICENSE README.md config.yaml geoip.dat geoip.db geosite.db mosdns mosdns.zip sing-box sing-box.tar.gz 
 
+      - name: Convert geo to rocket-rule-set
+        env:
+          NO_SKIP: true
+        run: |
+          mkdir -p ./rocket-rule/sites &&  mkdir -p ./rocket-rule/ips
+          cd ./rocket-rule/
+          wget https://github.com/IrineSistiana/mosdns/releases/download/v4.5.3/mosdns-linux-amd64.zip -O mosdns.zip && unzip mosdns.zip
+          cp ../geoip.dat ./ && cp ../geosite.db ./
+          ./mosdns v2dat unpack-domain -o ./sites/  ./geosite.dat
+          ./mosdns v2dat unpack-ip -o ./ips/  ./geoip.dat
+          list=($(ls ./ips | sed 's/geoip_//g' | sed 's/\.txt//g'))
+          for ((i = 0; i < ${#list[@]}; i++)); do
+          	sed -i 's/^/IP-CIDR,/g' ips/geoip_${list[i]}.txt
+          	sed -i 's/$/,${list[i]}/g' ips/geoip_${list[i]}.txt
+          	# sed -i '1s/^/{\n  "version": 1,\n  "rules": [\n    {\n      "ip_cidr": [\n/g' ips/geoip_${list[i]}.txt
+          	# sed -i '$ s/,$/\n      ]\n    }\n  ]\n}/g' ips/geoip_${list[i]}.txt
+          	mv ips/geoip_${list[i]}.txt ips/${list[i]}.list
+          done
+          list=($(ls ./sites | sed 's/geoip_//g' | sed 's/\.txt//g'))
+          for ((i = 0; i < ${#list[@]}; i++)); do
+            sed -i '/^regexp:/d' sites/geosite_${list[i]}.txt
+            sed -i 's/^full:|^rootDomain:/DOMAIN,/g' sites/geosite_${list[i]}.txt
+            sed -i 's/^keyword:|^plain:/DOMAIN-KEYWORD,/g' sites/geosite_${list[i]}.txt
+            sed -i '/^DOMAIN,/!{ /^DOMAIN-KEYWORD,/! { /\./! s/^/DOMAIN-SUFFIX,/ } }' sites/geosite_${list[i]}.txt
+            
+            sed -i 's/$/,${list[i]}/g' sites/geosite_${list[i]}.txt
+          	mv sites/geosite_${list[i]}.txt sites/${list[i]}.list
+          done
+          rm LICENSE README.md config.yaml geoip.dat geoip.db geosite.db mosdns mosdns.zip sing-box sing-box.tar.gz 
+
       - name: Move db and geosite srs files
         run: |
           mkdir -p ./publish/
@@ -261,6 +291,19 @@ jobs:
             git commit -m "Released on ${{ env.BUILDTIME }}"
             git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
             git push -f -u origin singdefault
+
+      - name: Git push assets to "rocket-rule" branch
+        run: |
+            cd rocket-rule || exit 1
+            ls
+            git init
+            git config --local user.name "github-actions[bot]"
+            git config --local user.email "github-actions[bot]@users.noreply.github.com"
+            git checkout -b rocket-rule
+            git add .
+            git commit -m "Released on ${{ env.BUILDTIME }}"
+            git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+            git push -f -u origin rocket-rule
             
       - name: Purge jsdelivr CDN
         run: |
